fixed size of page-content element to limit overflow

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,6 +3,7 @@ body {
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0;
+    height: 100vh;
 }
 
 
@@ -10,10 +11,10 @@ body {
 .page-content {
     /* background-color:red; */
     width: 90%;
-    min-height: 100%;
+    min-height: 100vh;
     margin: auto;
     /* margin-bottom: 50px; */
-    padding: 20px 0;
+    padding: 0;
     z-index: 1;
 }
 
@@ -67,6 +68,7 @@ body {
     top: 50%;
     left: 0;
     width:100%;
+    height: 100vh;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY((-50%));
